--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "build": "parcel build --public"
+    "build": "next build index.html"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.12.5",
-    "@firebase/app-types": "0.6.1",
+    "@firebase/app": "0.6.13",
     "@firebase/firestore": "2.0.5",
     "animejs": "3.2.1",
     "firebase": "8.1.2",
     "font-awesome": "4.7.0",
     "jquery": "3.5.1",
     "moment": "2.29.1",
+    "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "parcel-bundler": "1.12.4"
-  },
-  "keywords": []
+    "@babel/core": "7.12.9"
+  }
 }
