--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -2,5 +2,5 @@
   "infiniteLoopProtection": true,
   "hardReloadOnChange": true,
   "view": "browser",
-  "template": "create-react-app"
+  "template": "parcel"
 }
