--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "build": "next build index.html"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@firebase/app": "0.6.13",
@@ -15,10 +18,11 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1"
   },
   "devDependencies": {
-    "next": "10.0.3",
+    "typescript": "4.2.1",
     "@babel/core": "7.12.9"
   },
   "keywords": []
