--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "rocket-league-trader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "public",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "@firebase/app": "0.6.13",
+    "@firebase/app-types": "0.6.1",
     "@firebase/firestore": "2.0.5",
     "core-js": "3.8.1",
     "firebase": "8.1.2",
@@ -18,8 +16,7 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.1"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3",
