--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3",
