--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.1"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3",
@@ -30,7 +29,10 @@
     "doc": "",
     "rltrader": "public/index.html/"
   },
-  "keywords": ["build","please"],
+  "keywords": [
+    "build",
+    "please"
+  ],
   "author": {
     "name": "Ruby.js",
     "email": "TeamRivalityOfficial@gmail.com",
