--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "build please",
   "main": "rltrader",
   "scripts": {
-    "build": "parcel build rltrader"
+    "build": "parcel build --index.html"
   },
   "dependencies": {
     "@firebase/app": "0.6.13",
@@ -19,8 +19,9 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "typescript": "3.8.3",
-    "@babel/core": "7.12.9"
+    "typescript": "^3.8.3",
+    "parcel-bundler": "^1.12.4",
+    "@babel/core": "^7.12.9"
   },
   "directories": {
     "lib": "",
