--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "rocket-league-trader",
   "version": "1.0.0",
-  "description": "build please",
+  "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel start src/css-form.css",
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "@firebase/app": "0.6.13",
-    "@firebase/app-types": "0.6.1",
     "@firebase/firestore": "2.0.5",
-    "core-js": "3.8.1",
     "firebase": "8.1.2",
     "font-awesome": "4.7.0",
     "jquery": "3.5.1",
@@ -20,29 +16,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "typescript": "^3.8.3",
-    "parcel-bundler": "^1.12.4",
-    "@babel/core": "^7.12.9"
-  },
-  "directories": {
-    "lib": "",
-    "bin": "",
-    "man": "",
-    "doc": "",
-    "rltrader": "./index.html/",
-    "Output": "directory"
-  },
-  "keywords": [
-    "build",
-    "please"
-  ],
-  "author": {
-    "name": "Ruby.js",
-    "email": "TeamRivalityOfficial@gmail.com",
-    "url": "https://dx54u.csb.app/"
-  },
-  "repository": { 
-    "type": "git", 
-    "url": "https://github.com/RubyDevil/rocket-league-trader"
+    "parcel-bundler": "1.12.4",
+    "@babel/core": "7.12.9"
   }
 }
